--- a/src/app/components/class/class.component.html
+++ b/src/app/components/class/class.component.html
@@ -1,6 +1,6 @@
 <div class="page-header">
     <h1><small>Gerenciamento de aulas</small></h1>
-  </div>
+</div>
 <div class="container">
     <div class="row">
         <div class="col-md-6">
@@ -35,33 +35,24 @@
     Caso seja aula agendada se pode editar
     Caso seja nova aula pode se inscrever -->
     <div class="row">
-        <div class="col-md-4">
-            <div style="padding-left: 0;padding-right: 0" class="jumbotron">
-                <h3>Body Jump</h3>
-                <p>Duração: 40 minutos</p>
-                <p>Data: 29/12/12 18:00</p>
-                <p>Essa aula tem como principio os fundamentos de pulo na cama elastica.</p>
-                <p>Professor: Santos</p>
-                <p><a class="btn btn-primary btn-lg" role="button">
-                        Inscrever
-                    </a></p>
+        <div class="col-md-4" *ngFor="let currentClass of classRooms">
+            <div style="padding-left: 10px;padding-right: 10px" class="jumbotron">
+                <h3>{{currentClass.title}}</h3>
+                <hr>
+                <h5>{{currentClass.dateAndHour}}</h5>
+                <h5>Tipo: {{currentClass.type}}</h5>
+                <h5>{{currentClass.description}}</h5>
+                <h5>Professor: {{currentClass.teacherName}}</h5>
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h5>
+                            <a class="btn btn-primary btn-lg" role="button">
+                                Inscrever
+                            </a>
+                        </h5>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div style="padding-left: 0;padding-right: 0" class="jumbotron">
-                <h3>Body Jump</h3>
-                <p>Duração: 40 minutos</p>
-                <p>Data: 29/12/12 12:20</p>
-                <p>Essa aula tem como principio os fundamentos de pulo na cama elastica.</p>
-                <p>Professor: Igor</p>
-                <p><a class="btn btn-primary btn-lg" role="button">
-                        Desistir
-                    </a></p>
-            </div>
-        </div>
-    </div>
-    <div>
     </div>
 </div>
-<br>
-<br>
