--- a/src/app/components/class/class.component.html
+++ b/src/app/components/class/class.component.html
@@ -46,8 +46,8 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <h5>
-                            <a class="btn btn-primary btn-lg" role="button">
-                                Inscrever
+                            <a class="btn btn-primary btn-lg" (click)="confirmPresence(currentClass)" role="button">
+                                {{ currentClass.userConfirmed ? 'Cancelar participação' :'Confirmar presença'}}
                             </a>
                         </h5>
                     </div>
