--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -17,19 +17,11 @@
               </div>
             </div>
             <div class="inbox_chat">
-              <div class="chat_list active_chat">
-                <div class="chat_people">
+              <div class="chat_list" [ngClass]="{'active_chat': user._id === activeId}" *ngFor="let user of users">
+                <div class="chat_people" (click)="showMessages(user._id)">
                   <div class="chat_img"> <img src="https://banner2.kisspng.com/20180522/rve/kisspng-computer-icons-avatar-sport-5b03b4dbd67f95.9985958015269695638786.jpg" alt="sunil"> </div>
                   <div class="chat_ib">
-                    <h5>Roberto<span class="chat_date">Dec 25</span></h5>
-                  </div>
-                </div>
-              </div>
-              <div class="chat_list">
-                <div class="chat_people">
-                  <div class="chat_img"> <img src="https://banner2.kisspng.com/20180522/rve/kisspng-computer-icons-avatar-sport-5b03b4dbd67f95.9985958015269695638786.jpg" alt="sunil"> </div>
-                  <div class="chat_ib">
-                    <h5>Anderson<span class="chat_date">Dec 25</span></h5>
+                    <h5>{{ user.fullName }}<span class="chat_date">Dec 25</span></h5>
                   </div>
                 </div>
               </div>
@@ -74,8 +66,8 @@
             </div>
             <div class="type_msg">
               <div class="input_msg_write">
-                <input type="text" class="write_msg" placeholder="Escreva uma mensagem..." />
-                <button class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+                <input type="text" class="write_msg" placeholder="Escreva uma mensagem..." [(ngModel)]="message"/>
+                <button class="msg_send_btn" type="button" (click)="sendMessage(write_msg)"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
               </div>
             </div>
           </div>
