--- a/src/app/components/progress/progress.component.html
+++ b/src/app/components/progress/progress.component.html
@@ -1,112 +1,110 @@
 <div class="page-header">
     <h1><small>Relatório de evolução</small></h1>
-  </div>
-<div class="container">
-    <div class="row">
-        <div class="col-md-4">
-            <div style="padding-left: 0;padding-right: 0" class="jumbotron">
-                <div class="container" style="border: 1cm">
-                    <h3 align="Center">Novembro 2018</h3>
-                    <p>Media de Calorias Consumidas(Dia): 2300 </p>
-                    <p>Quantidade de aulas: 13</p>
-                    <p>Peso Ultima Avaliação: 95 Kg</p>
-                </div>
+</div>
+<div class="row">
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <div class="caption">
+                <h4 class="text-center title-progress">Novembro 2018</h4>
+                <p>Media de Calorias Consumidas(Dia): 2300 </p>
+                <p>Quantidade de aulas: 13</p>
+                <p>Peso Ultima Avaliação: 95 Kg</p>
             </div>
         </div>
-        <div class="col-md-4">
-            <div style="padding-left: 0;padding-right: 0" class="jumbotron">
-                <h3 align="Center">Ultimos 3 Meses X 3 a 6 Ultimos Meses</h3>
-                <table class="table">
-                    <tr>
-                        <td>Media de Calorias(Dia): 2500 Calorias</td>
-                        <td class="danger">-200 Calorias</td>
-                        <td>Media de Calorias(Dia): 2700 Calorias </td>
-                    </tr>
-                    <tr>
-                        <td>Aulas realizadas: 40</td>
-                        <td class="success">+5</td>
-                        <td>Aulas realizadas: 35</td>
-                    </tr>
-                    <tr>
-                        <td>Peso Ultima Avaliação: 95Kg</td>
-                        <td class="danger">-20 Kg</td>
-                        <td>Peso Primeira Avaliação Periodo: 115 Kg</td>
-                    </tr>
-                </table>
-            </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <h4 class="text-center title-progress">Ultimos 3 Meses X 3 a 6 Ultimos Meses</h4>
+            <table class="table">
+                <tr>
+                    <td>Media de Calorias(Dia): 2500 Calorias</td>
+                    <td class="danger">-200 Calorias</td>
+                    <td>Media de Calorias(Dia): 2700 Calorias </td>
+                </tr>
+                <tr>
+                    <td>Aulas realizadas: 40</td>
+                    <td class="success">+5</td>
+                    <td>Aulas realizadas: 35</td>
+                </tr>
+                <tr>
+                    <td>Peso Ultima Avaliação: 95Kg</td>
+                    <td class="danger">-20 Kg</td>
+                    <td>Peso Primeira Avaliação Periodo: 115 Kg</td>
+                </tr>
+            </table>
         </div>
-        <div class="col-md-4">
-            <div style="padding-left: 0;padding-right: 0" class="jumbotron">
-                <h3 align="Center">Ultima Avaliação X Penultima Avaliação</h3>
-                <table class="table">
-                    <tr>
-                        <td>Peso</td>
-                        <td>95 Kg</td>
-                        <td class="danger">-20 Kg</td>
-                        <td>115</td>
-                    </tr>
-                    <tr>
-                        <td>Antebraço Esquerdo</td>
-                        <td>8 cm</td>
-                        <td class="danger">-2 cm</td>
-                        <td>10 cm</td>
-                    </tr>
-                    <tr>
-                        <td>Antebraço Direito</td>
-                        <td>8 cm</td>
-                        <td class="danger">-2 cm</td>
-                        <td>10 cm</td>
-                    </tr>
-                    <tr>
-                        <td>Bíceps Direito</td>
-                        <td>36 cm</td>
-                        <td class="danger">-1 cm</td>
-                        <td>35 cm</td>
-                    </tr>
-                    <tr>
-                        <td>Coxa Direita</td>
-                        <td>60 cm</td>
-                        <td class="danger">-2 cm</td>
-                        <td>58 cm</td>
-                    </tr>
-                    <tr>
-                        <td>Panturrilha Direita</td>
-                        <td>28 cm</td>
-                        <td class="danger">-1 cm</td>
-                        <td>27 cm</td>
-                    </tr>
-                    <tr>
-                        <td>Panturrilha Esquerda</td>
-                        <td>28 cm</td>
-                        <td class="danger">-1 cm</td>
-                        <td>27 cm</td>
-                    </tr>
-                    <tr>
-                        <td>Costas</td>
-                        <td>60 cm</td>
-                        <td class="info">0 cm</td>
-                        <td>60 cm</td>
-                    </tr>
-                    <tr>
-                        <td>Quadril</td>
-                        <td>130 cm</td>
-                        <td class="danger">-2 cm</td>
-                        <td>123 cm</td>
-                    </tr>
-                    <tr>
-                        <td>Glúteos</td>
-                        <td>140 cm</td>
-                        <td class="danger">-1 cm</td>
-                        <td>139 cm</td>
-                    </tr>
-                    <tr>
-                        <td>Abdômen</td>
-                        <td>15 cm</td>
-                        <td class="success">-2 cm</td>
-                        <td>17 cm</td>
-                    </tr>
-                </table>
-            </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <h4 class="text-center title-progress">Ultima Avaliação X Penultima Avaliação</h4>
+            <table class="table">
+                <tr>
+                    <td>Peso</td>
+                    <td>95 Kg</td>
+                    <td class="danger">-20 Kg</td>
+                    <td>115</td>
+                </tr>
+                <tr>
+                    <td>Antebraço Esquerdo</td>
+                    <td>8 cm</td>
+                    <td class="danger">-2 cm</td>
+                    <td>10 cm</td>
+                </tr>
+                <tr>
+                    <td>Antebraço Direito</td>
+                    <td>8 cm</td>
+                    <td class="danger">-2 cm</td>
+                    <td>10 cm</td>
+                </tr>
+                <tr>
+                    <td>Bíceps Direito</td>
+                    <td>36 cm</td>
+                    <td class="danger">-1 cm</td>
+                    <td>35 cm</td>
+                </tr>
+                <tr>
+                    <td>Coxa Direita</td>
+                    <td>60 cm</td>
+                    <td class="danger">-2 cm</td>
+                    <td>58 cm</td>
+                </tr>
+                <tr>
+                    <td>Panturrilha Direita</td>
+                    <td>28 cm</td>
+                    <td class="danger">-1 cm</td>
+                    <td>27 cm</td>
+                </tr>
+                <tr>
+                    <td>Panturrilha Esquerda</td>
+                    <td>28 cm</td>
+                    <td class="danger">-1 cm</td>
+                    <td>27 cm</td>
+                </tr>
+                <tr>
+                    <td>Costas</td>
+                    <td>60 cm</td>
+                    <td class="info">0 cm</td>
+                    <td>60 cm</td>
+                </tr>
+                <tr>
+                    <td>Quadril</td>
+                    <td>130 cm</td>
+                    <td class="danger">-2 cm</td>
+                    <td>123 cm</td>
+                </tr>
+                <tr>
+                    <td>Glúteos</td>
+                    <td>140 cm</td>
+                    <td class="danger">-1 cm</td>
+                    <td>139 cm</td>
+                </tr>
+                <tr>
+                    <td>Abdômen</td>
+                    <td>15 cm</td>
+                    <td class="success">-2 cm</td>
+                    <td>17 cm</td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
