--- a/src/app/components/progress/progress.component.html
+++ b/src/app/components/progress/progress.component.html
@@ -6,20 +6,20 @@
         <div class="thumbnail">
             <div class="caption">
                 <h4 class="text-center title-progress">Novembro 2018</h4>
-                <p>Media de Calorias Consumidas(Dia): 2300 </p>
+                <p>Média de Calorias Consumidas(dia): 2300 </p>
                 <p>Quantidade de aulas: 13</p>
-                <p>Peso Ultima Avaliação: 95 Kg</p>
+                <p>Peso Última Avaliação: 95 Kg</p>
             </div>
         </div>
     </div>
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <h4 class="text-center title-progress">Ultimos 3 Meses X 3 a 6 Ultimos Meses</h4>
+            <h4 class="text-center title-progress">Últimos 3 Meses X 3 a 6 Últimos Meses</h4>
             <table class="table">
                 <tr>
-                    <td>Media de Calorias(Dia): 2500 Calorias</td>
+                    <td>Média de Calorias(Dia): 2500 Calorias</td>
                     <td class="danger">-200 Calorias</td>
-                    <td>Media de Calorias(Dia): 2700 Calorias </td>
+                    <td>Média de Calorias(Dia): 2700 Calorias </td>
                 </tr>
                 <tr>
                     <td>Aulas realizadas: 40</td>
@@ -27,7 +27,7 @@
                     <td>Aulas realizadas: 35</td>
                 </tr>
                 <tr>
-                    <td>Peso Ultima Avaliação: 95Kg</td>
+                    <td>Peso Última Avaliação: 95Kg</td>
                     <td class="danger">-20 Kg</td>
                     <td>Peso Primeira Avaliação Periodo: 115 Kg</td>
                 </tr>
@@ -36,7 +36,7 @@
     </div>
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <h4 class="text-center title-progress">Ultima Avaliação X Penultima Avaliação</h4>
+            <h4 class="text-center title-progress">Última Avaliação X Penúltima Avaliação</h4>
             <table class="table">
                 <tr>
                     <td>Peso</td>
