Pequenas alteracoes para funcionamento

--- a/src/app/components/evaluations/evaluations.component.html
+++ b/src/app/components/evaluations/evaluations.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="">
-    <h1><small>Avaliações Fisicas</small></h1>
+    <h1><small>Avaliações Físicas</small></h1>
   </div>
   <!-- <div class="row">
     <div class="col-md-6">
