--- a/src/app/components/notification/openNotification/open-notification.component.html
+++ b/src/app/components/notification/openNotification/open-notification.component.html
@@ -20,7 +20,7 @@
     <div class="row" *ngIf="notification.movie">
         <h4 align="center">Video</h4>
         <div class="col-md-12" align="center">
-            <youtube-player [videoId]="id">
+            <youtube-player [videoId]="notification.movie">
             </youtube-player>
         </div>
     </div>
